--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://use.typekit.net/cpr1qvx.css">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
